--- a/Front-end/style.css
+++ b/Front-end/style.css
@@ -16,7 +16,7 @@ body
     align-items: center;
     flex-direction: column;
     gap: 30px;
-    background-color: rgb(231,231,231);
+    background-color: rgb(231, 186, 248);
 }
 
 header
@@ -44,10 +44,11 @@ header
 {
     height: 600px;
     width: 500px;
-    background-color: white;
-    box-shadow: 8px 8px 20px rgb(128,128,128);
+    background-color: rgb(207, 102, 246);
+    box-shadow: 8px 8px 20px rgb(253, 145, 106);
     position: relative;
     overflow: hidden;
+    border-radius: 30px;
 }
 
 .btn
@@ -55,7 +56,7 @@ header
     height: 60px;
     width: 300px;
     margin: 20px auto;
-    box-shadow: 10px 10px 30px rgb(254,215,188);
+    box-shadow: 10px 10px 30px rgb(253, 145, 106);
     border-radius: 50px;
     display: flex;
     justify-content: space-around;
@@ -133,7 +134,7 @@ header
     outline: none;
     border: none;
     color: rgb(77,77,77);
-    background-color: rgb(240,240,240);
+    background-color: rgb(237, 205, 249);
     border-radius: 50px;
     padding-left: 30px;
     font-size: 18px;
